--- a/css/style.css
+++ b/css/style.css
@@ -9,37 +9,68 @@ a {
   position: relative;
   width: 640px;
   height: 500px;
-  display: inline-block;
+  /*display: inline-block;*/
   vertical-align: top;
+  margin: 0 auto;
 }
-.video_container:before {
-  content: 'Video Stream';
-  position: absolute;
-  top: -20px;
-  left: 0;
-}
+/*.video_container:before {*/
+  /*content: 'Video Stream';*/
+  /*position: absolute;*/
+  /*top: -20px;*/
+  /*left: 0;*/
+/*}*/
 #girl_draggable {
   position: absolute;
   top: 20px;
   left: 20px;
 }
 .screenshot_container {
+  display: none;
   position: relative;
   width: 640px;
   height: 500px;
-  display: inline-block;
+  /*display: inline-block;*/
   vertical-align: top;
 }
-.screenshot_container:before {
-  content: 'Screenshot';
-  position: absolute;
-  top: -20px;
-  left: 0;
+#canvas {
+  display: none;
 }
+
+/*.screenshot_container:before {*/
+  /*content: 'Screenshot';*/
+  /*position: absolute;*/
+  /*top: -20px;*/
+  /*left: 0;*/
+/*}*/
 .screenshot_container video {
 /*width: 100%;*/
 /*height: 100%;*/
   position: absolute;
   top: 0;
   left: 0;
+}
+
+#gallery_list {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  height: 100%;
+  padding-top: 10px;
+  box-sizing: border-box;
+  width: 170px;
+  overflow-y: scroll;
+}
+#gallery_list img {
+  width: 150px;
+}
+
+#happy_counter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #fff;
+  font-size: 68px;
+  margin-top: -39px;
+  margin-left: -19px;
+  z-index: 5;
 }
